# VocabTrainer

./: .gitignore  Cargo.toml
VocabTrainer/: test.json  test.txt  vocs.json  vocs.txt
src/: cmd_line.rs  config.rs  main.rs  utils.rs
