[package]
name = "VocabTrainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dirs = "5.0"
crossterm = "0.27.0"
strip-ansi-escapes = "0.2"
rand = "0.8.5"
# dashmap = "5.5.3"