[package]
name = "VocabTrainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
dirs = "5"
crossterm = "0.27"
rand = "0.8"
dashmap = "5"
clitty = { git = "https://github.com/terrarier2111/CLItty" }